# genro-bag

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish-contrib-resolvers.yml
benchmarks/: benchmark_bag.py
contrib/genropy_wrapper/: README.md
contrib/resolvers/: README.md  pyproject.toml
contrib/resolvers/src/genro_bag_contrib_resolvers/: __init__.py  earthquake_resolver.py  openmeteo_resolver.py  system_resolver.py
design_specifications/: README.md
design_specifications/01-overview/: 01-project_startup_info.md  02-project_status.md  03-compatibility_layer.md
design_specifications/02-array_dict/: 01-array_dict_spec.md
design_specifications/02-node_container/: 01-node_container_spec.md
design_specifications/03-bag_node/: 01-original_bagnode_spec.md  02-bagnode_decisions.md  03-bagnode_treestore_comparison.md  original_bagnode.py
design_specifications/04-bag/: 01-bag_spec.md  htraverse.md  js_bag_methods.md  original_bag.py  original_bag_methods.md  original_bag_short.py
design_specifications/05-resolver/: 01-original_resolver_spec.md  02-treestore_resolver_spec.md  03-resolver_comparison_decisions.md  bag_async_problem.md  original_resolver.py  resolver.md
design_specifications/06-builder/: 01-overview.md  (+1 more)
docs/: bagnode_incorrect_comments.md  examples.md  faq.md  getting-started.md  gnrbag_analysis.md  index.md  quickstart.md  resolvers.md
genro_bag/: __init__.py
gtext_src/: architecture.md.gtext  overview.md.gtext  subproject_hdr.md
notebooks/: 01-core-bag.ipynb  02-resolvers.ipynb  03-subscriptions.ipynb  04-builders.ipynb
outdated/: DEVELOPMENT_PLAN.md  RUST_IMPLEMENTATION.md
scripts/: download_html5_rnc.py  rnc_to_schema.py  rng_to_schema.py
tests/: _old_test_bag_node.py  conftest.py  test_bag.py  test_bag_stop_propagation.py  test_bag_timer_subscribe.py  test_bag_xml.py  test_bagnode_coverage.py  test_callback_resolver.py  test_clear_contract.py  test_coverage_extension.py  test_directory_resolver.py  test_env_resolver.py  test_file_resolver.py  test_fill_from_contract.py  test_hooks_contract.py  test_interval_contract.py  test_node_container.py  test_openapi_resolver.py  test_reactive_contract.py  test_resolver_active_cache.py  test_resolver_parameters.py  test_resolver_permutations.py  test_sync_resolver.py  test_transaction_contract.py  test_url_resolver.py  test_uuid_resolver.py
(+218 files in other folders)
