[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genro-bag-contrib-resolvers"
version = "0.2.0"
description = "Community-contributed resolvers for genro-bag"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Genropy Team" }]
dependencies = [
    "genro-bag>=0.11.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
system = ["psutil"]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/genro_bag_contrib_resolvers"]
